--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "azure-mgmt-costmanagement>=4.0.0",
     "azure-mgmt-compute>=33.0.0",
     # Cloud SDKs - Google
-    "google-generativeai>=0.8.0",
+    "google-genai>=1.0.0",
 ]
 
 [project.optional-dependencies]
