--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     # Core Utilities
     "keyring>=25.0.0",
     "httpx>=0.27.0",
+    "pydantic>=2.7.0",
     # Cloud SDKs - AWS
     "boto3>=1.35.0",
     # Cloud SDKs - Azure
