feat: 将GCP费用监控从Cloud Billing API切换为Cloud Billing Budgets API，以支持预算和支出监控。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     # Cloud SDKs - Google
     "google-genai>=1.0.0",
     "google-cloud-billing>=1.14.0",
+    "google-cloud-billing-budgets>=1.14.0",
 ]
 
 [dependency-groups]
